# light_builtins

./: .gitignore  Cargo.toml  CmakeLists.txt  Dockerfile  Makefile  README.md  _config.yml  project.json  rust.dockerfile
.github/workflows/: c-cpp.yml  codeql.yml  create release.yml  create-release.yml  docker.yml  format-rust.yml  lint.yml  test c-cpp.yml  test-c-cpp.yml
doc/: README.md
doc/Ultra_light/: README.md  cat.md  cp.md  echo.md  ls.md  mkdir.md  mv.md
doc/c/: README.md  cat.md  cp.md  echo.md  ls.md  mkdir.md  mv.md  rm.md  rmdir.md
doc/cpp/: README.md  cat.md  ls.md  mkdir.md  pwd.md  rm.md  rmdir.md
doc/rust/: README.md  cat.md  cp.md  echo.md  ls.md  mkdir.md  mv.md  pwd.md  rm.md  rmdir.md
dockerfiles/: c.dockerfile  cpp.dockerfile  rust.dockerfile  ultra_light.dockerfile
include/: config.h
scripts/: README.md  build_c.sh  build_cpp.sh  clean.sh
src/: README.md  cat.cpp  cp.cpp  date.cpp  echo.cpp  ls.cpp  mkdir.cpp  mv.cpp  pwd.cpp  rm.cpp  rmdir.cpp  touch.cpp
src/c/: README.md  cat.c  cp.c  date.c  echo.c  ls.c  mkdir.c  mv.c  pwd.c  rm.c  rmdir.c  touch.c
src/python/: README.md  cat.py  cp.py  date.py  echo.py  ls.py  mkdir.py  mv.py  pwd.py  rm.py  rmdir.py  touch.py
src/rust/: README.md  cat.rs  cp.rs  date.rs  echo.rs  ls.rs  mkdir.rs  mv.rs  pwd.rs  rm.rs  rmdir.rs  touch.rs
src/ultra_light/: README.md  cat.c  cat.cpp  cp.c  cp.cpp  date.c  date.cpp  echo.c  echo.cpp  ls.c  ls.cpp  mkdir.c  mkdir.cpp  mv.c  mv.cpp  pwd.c  pwd.cpp  rm.c  rm.cpp  rmdir.c  (+3 more)
tools/: README.md  build_c.sh  build_cpp.sh  clean.sh  cmake.sh
